@startuml

title __FRAGMENTS's Class Diagram__\n

  namespace com.example.androidximalayafm {
    namespace fragments {
      class com.example.androidximalayafm.fragments.HistoryFragment {
          # onSubViewLoaded()
      }
    }
  }
  

  namespace com.example.androidximalayafm {
    namespace fragments {
      class com.example.androidximalayafm.fragments.RecommendFragment {
          {static} - TAG : String
          - mRecommendRv : RecyclerView
          - mRootView : View
          + onDestroyView()
          + onEmpty()
          + onItemClick()
          + onLoading()
          + onNetworkError()
          + onRecommendListLoaded()
          + onRetryClick()
          # onSubViewLoaded()
          - createSuccessView()
      }
    }
  }
  

  namespace com.example.androidximalayafm {
    namespace fragments {
      class com.example.androidximalayafm.fragments.SubscriptionFragment {
          # onSubViewLoaded()
      }
    }
  }
  

  com.example.androidximalayafm.fragments.HistoryFragment -up-|> com.example.androidximalayafm.base.BaseFragment
  com.example.androidximalayafm.fragments.RecommendFragment .up.|> com.example.androidximalayafm.adapters.RecommendListAdapter.OnRecommendItemClickListener
  com.example.androidximalayafm.fragments.RecommendFragment .up.|> com.example.androidximalayafm.interfaces.IRecommendViewCallback
  com.example.androidximalayafm.fragments.RecommendFragment .up.|> com.example.androidximalayafm.views.UILoader.OnRetryClickListener
  com.example.androidximalayafm.fragments.RecommendFragment -up-|> com.example.androidximalayafm.base.BaseFragment
  com.example.androidximalayafm.fragments.RecommendFragment o-- com.example.androidximalayafm.adapters.RecommendListAdapter : mRecommendListAdapter
  com.example.androidximalayafm.fragments.RecommendFragment o-- com.example.androidximalayafm.presenters.RecommendPresenter : mRecommendPresenter
  com.example.androidximalayafm.fragments.RecommendFragment o-- com.example.androidximalayafm.views.UILoader : mUiLoader
  com.example.androidximalayafm.fragments.SubscriptionFragment -up-|> com.example.androidximalayafm.base.BaseFragment


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
